// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureExplorer should allow user to modify feature data 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        style="height: 100%; overflow: auto;"
      >
        <div
          style="height: 360px; width: 100%; position: relative;"
        >
          <div
            data-index="0"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="mb-3"
                    data-testid="feature"
                    title="Updated name"
                  >
                    <span
                      class="text-secondary"
                    >
                      1
                      .
                    </span>
                     
                    <span
                      class="fw-bold"
                    >
                      Updated name
                    </span>
                  </div>
                  <table
                    class="w-100 table table-sm table-bordered table-hover"
                  >
                    <tbody>
                      <tr>
                        <td
                          class="w-25"
                        >
                          osm_id
                        </td>
                        <td
                          class="text-bold"
                          title="-4511221"
                        >
                          -4511221
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          boundary
                        </td>
                        <td
                          class="text-bold"
                          title="administrative"
                        >
                          administrative
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          admin_level
                        </td>
                        <td
                          class="text-bold"
                          title="6"
                        >
                          6
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          parents
                        </td>
                        <td
                          class="text-bold"
                          title="-3360565,-252645"
                        >
                          -3360565,-252645
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          name
                        </td>
                        <td
                          class="text-bold"
                          title="Updated name"
                        >
                          Updated name
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          local_name
                        </td>
                        <td
                          class="text-bold"
                          title="Updated name"
                        >
                          Updated name
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          name_en
                        </td>
                        <td
                          class="text-bold"
                          title="Undefined value"
                        >
                          Undefined value
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          newVariable
                        </td>
                        <td
                          class="text-bold"
                          title="New value"
                        >
                          New value
                        </td>
                      </tr>
                      <tr>
                        <td>
                          Geometry
                        </td>
                        <td
                          class="text-bold"
                        >
                          MultiPolygon
                        </td>
                      </tr>
                    </tbody>
                  </table>
                  <div
                    class="w-100 d-flex justify-content-end"
                  >
                    <button
                      class="btn btn-sm btn-outline-secondary me-2"
                      data-testid="edit-data"
                      title="Edit data"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-pen abc-icon mx-1"
                        data-icon="pen"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <button
                      class="btn btn-sm btn-outline-secondary me-2"
                      title="Zoom on"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-magnifying-glass abc-icon mx-1"
                        data-icon="magnifying-glass"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      class="dropdown"
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-outline-secondary"
                        data-testid="feature-actions"
                        id="test-static-id-0"
                        type="button"
                      >
                        More
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="1"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Florida"
                  >
                    <span
                      class="text-secondary"
                    >
                      2
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Florida
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="2"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Manuel M. Caballero"
                  >
                    <span
                      class="text-secondary"
                    >
                      3
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Manuel M. Caballero
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="3"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Warnes"
                  >
                    <span
                      class="text-secondary"
                    >
                      4
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Warnes
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="4"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Andrés Ibáñez"
                  >
                    <span
                      class="text-secondary"
                    >
                      5
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Andrés Ibáñez
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="5"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Obispo Santistevan"
                  >
                    <span
                      class="text-secondary"
                    >
                      6
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Obispo Santistevan
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should display feature data 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        style="height: 100%; overflow: auto;"
      >
        <div
          style="height: 360px; width: 100%; position: relative;"
        >
          <div
            data-index="0"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class="mb-3"
                    data-testid="feature"
                    title="Provincia Cordillera"
                  >
                    <span
                      class="text-secondary"
                    >
                      1
                      .
                    </span>
                     
                    <span
                      class="fw-bold"
                    >
                      Provincia Cordillera
                    </span>
                  </div>
                  <table
                    class="w-100 table table-sm table-bordered table-hover"
                  >
                    <tbody>
                      <tr>
                        <td
                          class="w-25"
                        >
                          osm_id
                        </td>
                        <td
                          class="text-bold"
                          title="-4511221"
                        >
                          -4511221
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          boundary
                        </td>
                        <td
                          class="text-bold"
                          title="administrative"
                        >
                          administrative
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          admin_level
                        </td>
                        <td
                          class="text-bold"
                          title="6"
                        >
                          6
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          parents
                        </td>
                        <td
                          class="text-bold"
                          title="-3360565,-252645"
                        >
                          -3360565,-252645
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          name
                        </td>
                        <td
                          class="text-bold"
                          title="Provincia Cordillera"
                        >
                          Provincia Cordillera
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          local_name
                        </td>
                        <td
                          class="text-bold"
                          title="Provincia Cordillera"
                        >
                          Provincia Cordillera
                        </td>
                      </tr>
                      <tr>
                        <td
                          class="w-25"
                        >
                          name_en
                        </td>
                        <td
                          class="text-bold"
                          title="Undefined value"
                        >
                          Undefined value
                        </td>
                      </tr>
                      <tr>
                        <td>
                          Geometry
                        </td>
                        <td
                          class="text-bold"
                        >
                          MultiPolygon
                        </td>
                      </tr>
                    </tbody>
                  </table>
                  <div
                    class="w-100 d-flex justify-content-end"
                  >
                    <button
                      class="btn btn-sm btn-outline-secondary me-2"
                      data-testid="edit-data"
                      title="Edit data"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-pen abc-icon mx-1"
                        data-icon="pen"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <button
                      class="btn btn-sm btn-outline-secondary me-2"
                      title="Zoom on"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-magnifying-glass abc-icon mx-1"
                        data-icon="magnifying-glass"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      class="dropdown"
                    >
                      <button
                        aria-expanded="false"
                        class="dropdown-toggle btn btn-outline-secondary"
                        data-testid="feature-actions"
                        id="test-static-id-0"
                        type="button"
                      >
                        More
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="1"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Florida"
                  >
                    <span
                      class="text-secondary"
                    >
                      2
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Florida
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="2"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Manuel M. Caballero"
                  >
                    <span
                      class="text-secondary"
                    >
                      3
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Manuel M. Caballero
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="3"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Warnes"
                  >
                    <span
                      class="text-secondary"
                    >
                      4
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Warnes
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="4"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Andrés Ibáñez"
                  >
                    <span
                      class="text-secondary"
                    >
                      5
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Andrés Ibáñez
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="5"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Obispo Santistevan"
                  >
                    <span
                      class="text-secondary"
                    >
                      6
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Obispo Santistevan
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should display features and select automatically a feature title 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        style="height: 100%; overflow: auto;"
      >
        <div
          style="height: 360px; width: 100%; position: relative;"
        >
          <div
            data-index="0"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Cordillera"
                  >
                    <span
                      class="text-secondary"
                    >
                      1
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Cordillera
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="1"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Florida"
                  >
                    <span
                      class="text-secondary"
                    >
                      2
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Florida
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="2"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Manuel M. Caballero"
                  >
                    <span
                      class="text-secondary"
                    >
                      3
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Manuel M. Caballero
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="3"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Warnes"
                  >
                    <span
                      class="text-secondary"
                    >
                      4
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Warnes
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="4"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Andrés Ibáñez"
                  >
                    <span
                      class="text-secondary"
                    >
                      5
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Andrés Ibáñez
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="5"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Obispo Santistevan"
                  >
                    <span
                      class="text-secondary"
                    >
                      6
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Obispo Santistevan
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should display nothing if no active layer 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          disabled=""
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        class="my-3"
      >
        Select a vector layer to view its data
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should display nothing if no feature 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div>
        This layer contains no data
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should filter features on search 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value="Cordillera"
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        style="height: 100%; overflow: auto;"
      >
        <div
          style="height: 360px; width: 100%; position: relative;"
        >
          <div
            data-index="0"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="Provincia Cordillera"
                  >
                    <span
                      class="text-secondary"
                    >
                      1
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      Provincia Cordillera
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureExplorer should use selected title field 1`] = `
<div>
  <div
    class="h-100 d-flex flex-column justify-content-start p-3"
  >
    <div
      class="d-flex align-items-center mb-3"
    >
      <h5
        class="me-3"
      >
        Feature explorer
      </h5>
      <div>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info abc-icon"
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="width: 1.2rem; height: 1.2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-144c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="d-flex flex-row mb-2"
    >
      <select
        class="form-select"
      >
        <option
          value="None"
        >
          Select a layer
        </option>
        <option
          value="test-layer-id"
        >
          Geometries
        </option>
      </select>
    </div>
    <div
      class="d-flex flex-column mb-2"
    >
      <div
        class="d-flex align-items-center"
      >
        <input
          class="form-control me-2"
          data-testid="search-query"
          placeholder="Search in data"
          type="text"
          value=""
        />
        <button
          class="btn btn-outline-secondary"
          data-testid="settings"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-gear abc-icon"
            data-icon="gear"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336c44.2 0 80-35.8 80-80s-35.8-80-80-80s-80 35.8-80 80s35.8 80 80 80z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="p-1"
    >
      <div
        style="height: 100%; overflow: auto;"
      >
        <div
          style="height: 360px; width: 100%; position: relative;"
        >
          <div
            data-index="0"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4511221"
                  >
                    <span
                      class="text-secondary"
                    >
                      1
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4511221
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="1"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4510333"
                  >
                    <span
                      class="text-secondary"
                    >
                      2
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4510333
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="2"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4510325"
                  >
                    <span
                      class="text-secondary"
                    >
                      3
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4510325
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="3"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4510305"
                  >
                    <span
                      class="text-secondary"
                    >
                      4
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4510305
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="4"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4510304"
                  >
                    <span
                      class="text-secondary"
                    >
                      5
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4510304
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-index="5"
            style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
          >
            <div
              class="me-1 mb-1"
            >
              <div
                class="card"
              >
                <div
                  class="card-body"
                >
                  <div
                    class=""
                    data-testid="feature"
                    title="-4510265"
                  >
                    <span
                      class="text-secondary"
                    >
                      6
                      .
                    </span>
                     
                    <span
                      class=""
                    >
                      -4510265
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
